--- a/src/blocks/modules/intro/intro.html
+++ b/src/blocks/modules/intro/intro.html
@@ -4,7 +4,7 @@
 			<div class="intro__content">
 				<img class="intro__logo" src="img/intro-img.svg" alt="Заглавная картинка">
 				<h2 class="intro__title">
-					Система профилей мебели без ручек
+					Система <br> профилей мебели <br> без ручек
 				</h2>
 				<a href="" class="btn btn--dark intro__btn">
 					Подробнее
