--- a/src/blocks/modules/modal/modal.html
+++ b/src/blocks/modules/modal/modal.html
@@ -3508,6 +3508,35 @@
 	</div>
 </section>
 
+<section class="modal-service" id="modal-service" style="display: none;">
+	<div class="container">
+		<div class="modal-service__content">
+			<div class="modal-service__slider">
+				@@include("../slider/slider.html")
+			</div>
+			<div class="text modal-service__text">
+				<p>
+					<strong>Возможны диаметры сверления:</strong>
+					- глухие: 3, 5, 8, 10, 15, 20, 25, 35мм <br>
+					- сквозные сверления: 5, 8, 10мм <br>
+					- торцевые сверление глухие: 5 и 8мм!
+				</p>
+				<p>
+					<strong>Ограничения оказания услуги сверления:</strong>
+					- сверление осуществляется только при оказании услуги распила
+					полноформатных листов ДСП/МДФ на пиленом центре с ЧПУ (Holzma) компании Балтламинат! <br>
+					- услуга предоставляется при предоставлении схем сверления (это может
+					быть как чертёж от руки, так и изображение или схема в электронном виде,
+					главное требование - читабельность) <br>
+					- минимальный размер детали: 200 х 70 х 12 мм <br>
+					- максимальный размер детали: 4000 х 1050 х 40 мм <br>
+					- максимальная глубина сверления - 35мм.
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
+
 <form id="modal-write" class="modal-write" style="display: none;">
 	<h2 class="title modal-write__title">
 		Написать директору
