--- a/src/blocks/modules/case/case.html
+++ b/src/blocks/modules/case/case.html
@@ -3,9 +3,21 @@
 		<div class="case__content">
 			<div class="case__articles">
 				<div class="case__header">
-					<h2 class="title case__title">
-						Новинки
-					</h2>
+					<p class="case__title case__title--active">
+						<span>
+							Новинки
+						</span>
+					</p>
+					<p class="case__title">
+						<span>
+							Акции
+						</span>
+					</p>
+					<p class="case__title">
+						<span>
+							Распродажа
+						</span>
+					</p>
 				</div>
 				<div class="case__items articles">
 					<a href="" class="item">
