--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -69,12 +69,15 @@
 				</nav>
 				<div class="bottom__columns">
 					<div class="bottom__column">
-						<div class="bottom__socials">
-							@@include("../socials/socials-footer.html")
+						<div class="bottom__contacts">
+							<div class="bottom__socials">
+								@@include("../socials/socials-footer.html")
+							</div>
+							<a href="#modal-write" class="btn btn--light bottom__btn" data-fancybox>
+								Написать директору
+							</a>
 						</div>
-						<a href="#modal-write" class="btn btn--light bottom__btn" data-fancybox>
-							Написать директору
-						</a>
+						
 						<div class="bottom__text">
 							<p>
 								236023, г. Калининград, Советский пр.125, <strong>тел.:</strong> +7(4012)777-001 <br>
@@ -99,5 +102,11 @@
 			</div>
 		</div>
 	</section>
-	
+	<section class="toolbar">
+		<div class="container">
+			<div class="toolbar__content">
+				
+			</div>
+		</div>
+	</section>
 </footer>
