--- a/src/blocks/modules/modal/modal.html
+++ b/src/blocks/modules/modal/modal.html
@@ -1,5 +1,8 @@
 <section id="modal-menu--1" class="modal-menu" style="display: none;">
 	<div class="container">
+		<div class="title modal-menu__main-title">
+			Заголовок
+		</div>
 		<div class="modal-menu__content">
 
 			<div class="modal-menu__block">
@@ -351,6 +354,9 @@
 
 <section id="modal-menu--2" class="modal-menu" style="display: none;">
 	<div class="container">
+		<div class="title modal-menu__main-title">
+			Заголовок
+		</div>
 		<div class="modal-menu__content">
 
 			<div class="modal-menu__block">
@@ -702,6 +708,9 @@
 
 <section id="modal-menu--3" class="modal-menu" style="display: none;">
 	<div class="container">
+		<div class="title modal-menu__main-title">
+			Заголовок
+		</div>
 		<div class="modal-menu__content">
 
 			<div class="modal-menu__block">
@@ -1053,6 +1062,9 @@
 
 <section id="modal-menu--4" class="modal-menu" style="display: none;">
 	<div class="container">
+		<div class="title modal-menu__main-title">
+			Заголовок
+		</div>
 		<div class="modal-menu__content">
 
 			<div class="modal-menu__block">
@@ -1404,6 +1416,9 @@
 
 <section id="modal-menu--5" class="modal-menu" style="display: none;">
 	<div class="container">
+		<div class="title modal-menu__main-title">
+			Заголовок
+		</div>
 		<div class="modal-menu__content">
 
 			<div class="modal-menu__block">
@@ -1755,6 +1770,9 @@
 
 <section id="modal-menu--6" class="modal-menu" style="display: none;">
 	<div class="container">
+		<div class="title modal-menu__main-title">
+			Заголовок
+		</div>
 		<div class="modal-menu__content">
 
 			<div class="modal-menu__block">
@@ -2106,6 +2124,9 @@
 
 <section id="modal-menu--7" class="modal-menu" style="display: none;">
 	<div class="container">
+		<div class="title modal-menu__main-title">
+			Заголовок
+		</div>
 		<div class="modal-menu__content">
 
 			<div class="modal-menu__block">
@@ -2457,6 +2478,9 @@
 
 <section id="modal-menu--8" class="modal-menu" style="display: none;">
 	<div class="container">
+		<div class="title modal-menu__main-title">
+			Заголовок
+		</div>
 		<div class="modal-menu__content">
 
 			<div class="modal-menu__block">
@@ -2808,6 +2832,9 @@
 
 <section id="modal-menu--9" class="modal-menu" style="display: none;">
 	<div class="container">
+		<div class="title modal-menu__main-title">
+			Заголовок
+		</div>
 		<div class="modal-menu__content">
 
 			<div class="modal-menu__block">
@@ -3159,6 +3186,9 @@
 
 <section id="modal-menu--10" class="modal-menu" style="display: none;">
 	<div class="container">
+		<div class="title modal-menu__main-title">
+			Заголовок
+		</div>
 		<div class="modal-menu__content">
 
 			<div class="modal-menu__block">
