--- a/src/blocks/modules/intro/intro.html
+++ b/src/blocks/modules/intro/intro.html
@@ -1,6 +1,6 @@
 <section class="intro">
 	<div class="container">
-		<div class="intro__columns">
+		<div class="intro__columns" style="background-image: url('img/intro-img.jpg');">
 			<div class="intro__content">
 				<img class="intro__logo" src="img/intro-img.png" alt="Заглавная картинка">
 				<h2 class="intro__title">
