--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -102,11 +102,43 @@
 			</div>
 		</div>
 	</section>
-	<section class="toolbar">
+	<section class="footer-toolbar">
 		<div class="container">
-			<div class="toolbar__content">
-				
+			<div class="footer-toolbar__content">
+				<a href="" class="footer-toolbar__link">
+					<svg class="icon-svg footer-toolbar__icon">
+						<use xlink:href="img/sprites/sprite.svg#icon-footer-home"></use>
+					</svg>
+					<p class="footer-toolbar__text">
+						Главная
+					</p>
+				</a>
+				<a href="" class="footer-toolbar__link">
+					<svg class="icon-svg footer-toolbar__icon">
+						<use xlink:href="img/sprites/sprite.svg#icon-footer-catalog"></use>
+					</svg>
+					<p class="footer-toolbar__text">
+						Каталог
+					</p>
+				</a>
+				<a href="" class="footer-toolbar__link">
+					<svg class="icon-svg footer-toolbar__icon">
+						<use xlink:href="img/sprites/sprite.svg#icon-footer-favorites"></use>
+					</svg>
+					<p class="footer-toolbar__text">
+						Избранное
+					</p>
+				</a>
+				<a href="" class="footer-toolbar__link">
+					<svg class="icon-svg footer-toolbar__icon">
+						<use xlink:href="img/sprites/sprite.svg#icon-footer-cart"></use>
+					</svg>
+					<p class="footer-toolbar__text">
+						Корзина
+					</p>
+				</a>
 			</div>
 		</div>
 	</section>
 </footer>
+@@include("../mmenu/mmenu.html")
