--- a/src/blocks/modules/case/case.html
+++ b/src/blocks/modules/case/case.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="case__items articles">
 					<a href="" class="item">
-						<div class="item__thumb">
+						<div class="item__thumb resized">
 							<img src="http://placehold.it/900x600" alt="Ламинат Villeroy & Boch коллекция 2020-2021">
 						</div>
 						<p class="item__title">
@@ -29,7 +29,7 @@
 						</p>
 					</a>
 					<a href="" class="item">
-						<div class="item__thumb">
+						<div class="item__thumb resized">
 							<img src="http://placehold.it/900x600" alt="Egger decorative collection 2020-22!">
 						</div>
 						<p class="item__title">
@@ -37,7 +37,7 @@
 						</p>
 					</a>
 					<a href="" class="item">
-						<div class="item__thumb">
+						<div class="item__thumb resized">
 							<img src="http://placehold.it/900x600" alt="Egger decorative collection 2020-22 DSP!">
 						</div>
 						<p class="item__title">
@@ -45,7 +45,7 @@
 						</p>
 					</a>
 					<a href="" class="item">
-						<div class="item__thumb">
+						<div class="item__thumb resized">
 							<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
 						</div>
 						<p class="item__title">
@@ -53,7 +53,7 @@
 						</p>
 					</a>
 					<a href="" class="item">
-						<div class="item__thumb">
+						<div class="item__thumb resized">
 							<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
 						</div>
 						<p class="item__title">
@@ -61,7 +61,7 @@
 						</p>
 					</a>
 					<a href="" class="item">
-						<div class="item__thumb">
+						<div class="item__thumb resized">
 							<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
 						</div>
 						<p class="item__title">
@@ -69,7 +69,7 @@
 						</p>
 					</a>
 					<a href="" class="item">
-						<div class="item__thumb">
+						<div class="item__thumb resized">
 							<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
 						</div>
 						<p class="item__title">
@@ -77,7 +77,7 @@
 						</p>
 					</a>
 					<a href="" class="item">
-						<div class="item__thumb">
+						<div class="item__thumb resized">
 							<img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
 						</div>
 						<p class="item__title">
@@ -99,7 +99,7 @@
 					</p>
 				</div>
 				<form action="" class="case__form status">
-					<input type="text" class="status__input" placeholder="Введите номер заказа">
+					<input type="text" class="status__input" placeholder="Номер заказа">
 					<button class="btn btn--dark status__button">
 						Проверить
 					</button>
