--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -140,7 +140,7 @@
 				<form action="" class="head-mobile__search">
 					<input type="text" class="head-mobile__input" style="background-image: url('img/icon-search.svg')">
 				</form>
-				<a href="" class="head-mobile__btn">
+				<a href="#mmenu" class="head-mobile__btn">
 					<svg class="icon-svg">
 						<use xlink:href="img/sprites/sprite.svg#icon-mob-menu"></use>
 					</svg>
