--- a/src/blocks/modules/partners/partners.html
+++ b/src/blocks/modules/partners/partners.html
@@ -3,48 +3,57 @@
 		<h2 class="title partners__title">
 			Наши партнеры
 		</h2>
-		<div class="articles articles--around partners__article">
-			<a href="" class="front-partner">
+		<!-- <div class="partners__header">
+			<h2 class="title partners__title">
+				Наши партнеры
+			</h2>
+			<a href="" class="partners__link">
+				Все партнеры
+			</a>
+		</div> -->
+		
+		<div class="articles partners__article">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-1.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-2.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-3.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-4.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-5.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-6.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-1.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-2.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-3.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-4.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-5.png" alt="" class="front-partner__img">
 			</a>
-			<a href="" class="front-partner">
+			<a href="" class="front-partner resized">
 				<img src="img/partner-6.png" alt="" class="front-partner__img">
 			</a>
+<!-- 			<div class="front-partner front-partner--clear"></div>
 			<div class="front-partner front-partner--clear"></div>
 			<div class="front-partner front-partner--clear"></div>
 			<div class="front-partner front-partner--clear"></div>
-			<div class="front-partner front-partner--clear"></div>
-			<div class="front-partner front-partner--clear"></div>
+			<div class="front-partner front-partner--clear"></div> -->
 		</div>
 	</div>
 </section>
