--- a/src/blocks/modules/filter/filter.html
+++ b/src/blocks/modules/filter/filter.html
@@ -1,4 +1,4 @@
-<section class="filter">
+<section class="filter" id="filter">
 	<div class="filter__section">
 		<div class="filter__title">
 			<p class="title-small title-small--product">
@@ -7,7 +7,7 @@
 				</span>
 			</p>
 		</div>
-		<div data-simplebar data-simplebar-auto-hide="false" class="filter__content filter__content--scroll" >
+		<div class="filter__content filter__content--scroll" id="scrollbar-1">
 			<div class="filter-drop">
 				<div class="filter-drop__header">
 					<svg class="icon-svg filter-drop__icon">
@@ -9139,7 +9139,7 @@
 	</div>
 
 	<div class="filter__section">
-		<div data-simplebar data-simplebar-auto-hide="false" class="filter__content filter__content--scroll">
+		<div class="filter__content filter__content--scroll" id="scrollbar-2">
 			<div class="filter-drop">
 				<div class="filter-drop__header">
 					<svg class="icon-svg filter-drop__icon">
