--- a/src/blocks/modules/intro/intro.html
+++ b/src/blocks/modules/intro/intro.html
@@ -1,4 +1,7 @@
-<section class="intro">
+<!-- У блока есть несколько цветовых схем, они задаются классом 'intro--type-1'
+Их 13 разных, сделай в админке соответствующий select -->
+
+<section class="intro intro--type-1">
 	<div class="container">
 		<div class="intro__columns" style="background-image: url('img/intro-img.jpg');">
 			<div class="intro__content">
