--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -137,6 +137,14 @@
 						Корзина
 					</p>
 				</a>
+				<a href="" class="footer-toolbar__link footer-toolbar__link--search">
+					<svg class="icon-svg footer-toolbar__icon">
+						<use xlink:href="img/sprites/sprite.svg#icon-search-footer"></use>
+					</svg>
+					<p class="footer-toolbar__text">
+						Поиск
+					</p>
+				</a>
 			</div>
 		</div>
 	</section>
