--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -59,30 +59,41 @@
 			</div>
 			<div class="head-main__section">
 				<div class="top-nav">
-					<a href="" class="top-nav__home">
+					<!-- <a href="" class="top-nav__home">
 						<svg class="icon-svg">
 							<use xlink:href="img/sprites/sprite.svg#icon-home"></use>
 						</svg>
-					</a>
-					<a href="" class="top-nav__catalog">
+						<span>
+							Главная
+						</span>
+					</a> -->
+					<!-- <a href="" class="top-nav__catalog">
 						<svg class="icon-svg">
 							<use xlink:href="img/sprites/sprite.svg#icon-top-menu"></use>
 						</svg>
 						<span>
 							Каталог
 						</span>
+					</a> -->
+					<a href="" class="top-nav__link">
+						<svg class="icon-svg">
+							<use xlink:href="img/sprites/sprite.svg#icon-home"></use>
+						</svg>
+						<span>
+							Главная
+						</span>
 					</a>
 					<a href="" class="top-nav__link top-nav__link--active">
-						Услуги
+						<span>Услуги</span>
 					</a>
 					<a href="" class="top-nav__link">
-						Мебель
+						<span>Мебель</span>
 					</a>
 					<a href="" class="top-nav__link">
-						О нас
+						<span>О нас</span>
 					</a>
 					<a href="" class="top-nav__link">
-						Контакты
+						<span>Контакты</span>
 					</a>
 				</div>
 			</div>
