--- a/src/blocks/modules/modal/modal.html
+++ b/src/blocks/modules/modal/modal.html
@@ -373,7 +373,7 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
@@ -760,7 +760,7 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
@@ -1147,7 +1147,7 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
@@ -1534,7 +1534,7 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
@@ -1921,7 +1921,7 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
@@ -2308,7 +2308,7 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
@@ -2695,7 +2695,7 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
@@ -3082,7 +3082,7 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
@@ -3469,7 +3469,7 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
@@ -3856,7 +3856,7 @@
 			<div class="modal-menu__block">
 				<a href="" class="modal-menu__title">
 					<p class="modal-menu__number">
-						17
+						17.
 					</p>
 					<p class="modal-menu__title-text">
 						Системы раздвиженых и складных дверей
@@ -3872,7 +3872,7 @@
 	<div class="container">
 		<div class="modal-service__content">
 			<div class="modal-service__slider">
-				@@include("../slider/slider.html")
+				@@include("../slider/slider-clean.html")
 			</div>
 			<div class="text modal-service__text">
 				<p>
@@ -3905,14 +3905,21 @@
 		<p class="input__title">
 			Имя: 
 		</p>
-		<input type="text" class="input__input" placeholder="Как к вам обращаться?">
+		<input type="text" class="input__input" required>
 	</label>
 
 	<label class="input">
 		<p class="input__title">
-			E-mail или телефон: 
+			E-mail: 
 		</p>
-		<input type="text" class="input__input" placeholder="Как к вам обращаться?">
+		<input type="text" class="input__input" required>
+	</label>
+
+	<label class="input">
+		<p class="input__title">
+			Телефон: 
+		</p>
+		<input type="text" class="input__input" required>
 	</label>
 
 	<label class="input">
