--- a/src/blocks/modules/slider/slider-clean.html
+++ b/src/blocks/modules/slider/slider-clean.html
@@ -1,53 +1,23 @@
-<div class="slider slider--modal">
+<div class="slider">
 	<div class="swiper-container slider-top">
 		<div class="swiper-wrapper slider-top__wrapper">
-			<a href="https://placehold.it/1900x1600" data-swiper-slide-index="1" data-fancybox="swiper-gallery" data-type="image" class="swiper-slide slider-top__slide">
+			<a href="https://placehold.it/1900x1600" class="swiper-slide slider-top__slide">
 				<img src="https://placehold.it/900x600" alt="Фото товара">
-				<div class="slider-top__icon">
-					<svg class="icon-svg">
-						<use xlink:href="img/sprites/sprite.svg#icon-slide-big"></use>
-					</svg>
-				</div>
 			</a>
-			<a href="https://placehold.it/1900x1601" data-swiper-slide-index="2" data-fancybox="swiper-gallery" data-type="image" class="swiper-slide slider-top__slide">
+			<a href="https://placehold.it/1900x1601" class="swiper-slide slider-top__slide">
 				<img src="https://placehold.it/1900x601" alt="Фото товара">
-				<div class="slider-top__icon">
-					<svg class="icon-svg">
-						<use xlink:href="img/sprites/sprite.svg#icon-slide-big"></use>
-					</svg>
-				</div>
 			</a>
-			<a href="https://placehold.it/1900x1602" data-swiper-slide-index="3" data-fancybox="swiper-gallery" data-type="image" class="swiper-slide slider-top__slide">
+			<a href="https://placehold.it/1900x1602" class="swiper-slide slider-top__slide">
 				<img src="https://placehold.it/900x602" alt="Фото товара">
-				<div class="slider-top__icon">
-					<svg class="icon-svg">
-						<use xlink:href="img/sprites/sprite.svg#icon-slide-big"></use>
-					</svg>
-				</div>
 			</a>
-			<a href="https://placehold.it/1900x1603" data-swiper-slide-index="4" data-fancybox="swiper-gallery" data-type="image" class="swiper-slide slider-top__slide">
+			<a href="https://placehold.it/1900x1603" class="swiper-slide slider-top__slide">
 				<img src="https://placehold.it/1900x603" alt="Фото товара">
-				<div class="slider-top__icon">
-					<svg class="icon-svg">
-						<use xlink:href="img/sprites/sprite.svg#icon-slide-big"></use>
-					</svg>
-				</div>
 			</a>
-			<a href="https://placehold.it/1900x1604" data-swiper-slide-index="5" data-fancybox="swiper-gallery" data-type="image" class="swiper-slide slider-top__slide">
+			<a href="https://placehold.it/1900x1604" class="swiper-slide slider-top__slide">
 				<img src="https://placehold.it/900x604" alt="Фото товара">
-				<div class="slider-top__icon">
-					<svg class="icon-svg">
-						<use xlink:href="img/sprites/sprite.svg#icon-slide-big"></use>
-					</svg>
-				</div>
 			</a>
-			<a href="https://placehold.it/1900x1605" data-swiper-slide-index="6" data-fancybox="swiper-gallery" data-type="image" class="swiper-slide slider-top__slide">
+			<a href="https://placehold.it/1900x1605" class="swiper-slide slider-top__slide">
 				<img src="https://placehold.it/1900x605" alt="Фото товара">
-				<div class="slider-top__icon">
-					<svg class="icon-svg">
-						<use xlink:href="img/sprites/sprite.svg#icon-slide-big"></use>
-					</svg>
-				</div>
 			</a>
 		</div>
 		<div class="slider-top__pagination">
