--- a/src/blocks/modules/lk-menu/lk-menu.html
+++ b/src/blocks/modules/lk-menu/lk-menu.html
@@ -1,33 +1,11 @@
-<a href="#side-menu" data-fancybox="lk-menu-modal" class="side-head">
+<a href="33-page.html" class="side-head">
 	<div class="container side-head__container">
-		<p class="side-head__title">
-			Личный кабинет
-		</p>
 		<svg class="icon-svg side-head__icon">
 			<use xlink:href="img/sprites/sprite.svg#icon-dots"></use>
 		</svg>
+		<!-- Эта ссылка ведет на родительскую страницу, в зависимости от того, что там,подставляй соответствующий текст -->
+		<p class="side-head__title">
+			Все заказы
+		</p>
 	</div>
 </a>
-
-<div class="side-menu" id="side-menu">
-	<nav class="side-menu__nav">
-		<a href="" class="side-menu__link">
-			Корзина <strong>(3)</strong>
-		</a>
-		<a href="" class="side-menu__link">
-			Заказы
-		</a>
-		<a href="" class="side-menu__link">
-			Данные пользователя
-		</a>
-		<a href="" class="side-menu__link side-menu__link--active">
-			Организации
-		</a>
-		<a href="" class="side-menu__link">
-			Избранные товары
-		</a>
-		<a href="" class="side-menu__link">
-			Сообщения
-		</a>
-	</nav>
-</div>
