--- a/src/blocks/modules/modal/modal.html
+++ b/src/blocks/modules/modal/modal.html
@@ -3953,3 +3953,15 @@
 		Отправить
 	</button>
 </form>
+
+<!-- Следующая модалка - пасхалка, она выводится по нажатию клавиш Q + W + Enter -->
+<section class="modal-service modal-service--hidden" id="modal-accent" style="display: none;">
+	<div class="text">
+		<h2>
+			Поздравляем!
+		</h2>
+		<p>
+			Вы нашли скрытый контент.
+		</p>
+	</div>
+</section>
