--- a/src/blocks/modules/case/case.html
+++ b/src/blocks/modules/case/case.html
@@ -90,6 +90,9 @@
 							<div class="item item--clear"></div>
 							<div class="item item--clear"></div>
 						</div>
+						<a href="" class="case__link-all">
+							Все новинки
+						</a>
 					</div>
 					<div class="swiper-slide case__slider-slide" data-name="Акции">
 						<div class="case__items articles">
@@ -161,6 +164,9 @@
 							<div class="item item--clear"></div>
 							<div class="item item--clear"></div>
 						</div>
+						<a href="" class="case__link-all">
+							Все акции
+						</a>
 					</div>
 					<div class="swiper-slide case__slider-slide" data-name="Распродажа">
 						<div class="case__items articles">
@@ -232,12 +238,11 @@
 							<div class="item item--clear"></div>
 							<div class="item item--clear"></div>
 						</div>
+						<a href="" class="case__link-all">
+							Все распродажи
+						</a>
 					</div>
 				</div>
-				
-				<a href="" class="case__link-all">
-					Все новинки
-				</a>
 			</div>
 			<div class="case__sidebar">
 				<div class="case__header">
