--- a/src/blocks/modules/filter/filter.html
+++ b/src/blocks/modules/filter/filter.html
@@ -9094,6 +9094,17 @@
 	</div>
 
 	<div class="filter__section">
+		<select class="dropdown select-sort">
+			<option value="https://vk.com/">VK</option>
+			<option value="https://www.facebook.com/">FB</option>
+			<option value="https://www.instagram.com/">Inst</option>
+		</select>
+
+
+		Ссылка: <span id="foo"></span>
+	</div>
+
+	<div class="filter__section">
 		<div class="filter__block-header">
 			<p class="filter__name">
 				Цена
