--- a/src/blocks/modules/modal/modal.html
+++ b/src/blocks/modules/modal/modal.html
@@ -3641,7 +3641,7 @@
 	</form>
 </section>
 
-<section class="modal-service modal-service--hidden" id="org-info">
+<section class="modal-service modal-service--hidden" id="org-info" style="display: none;">
 	<div class="lk-company">
 		<p class="lk-company__header lk-company__header--modal">
 			ИП Мебель на заказ
@@ -3730,5 +3730,16 @@
 				</div>
 			</div>
 		</div>
+	</div>
+</section>
+
+<!-- Если тебе нужно сделать узкую модалку, добавь класс modal-service--hidden -->
+<section class="modal-service" id="idmodal" style="display: none;">
+	<div class="text">
+		<h4>Заголовок h4</h4>
+		<h5>Заголовок h5</h5>
+		<p>
+			Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga, repudiandae. Ipsa minima itaque provident cupiditate nisi aut fugit error iusto, distinctio modi vero ratione possimus fugiat. <a href="">Laboriosam</a> dolores id neque!
+		</p>
 	</div>
 </section>
