--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -70,8 +70,11 @@
 				<div class="bottom__columns">
 					<div class="bottom__column">
 						<div class="bottom__contacts">
-							<a href="#modal-write" class="btn btn--light bottom__btn" data-fancybox="modal">
+							<a href="#modal-write" class="btn btn--light bottom__btn bottom__btn--1" data-fancybox="modal">
 								Написать директору
+							</a>
+							<a href="" class="btn btn--dark bottom__btn bottom__btn--2">
+								Загрузки
 							</a>
 						</div>
 						<div class="bottom-link">
