'edit-front-slider'

--- a/src/blocks/modules/case/case.html
+++ b/src/blocks/modules/case/case.html
@@ -247,7 +247,7 @@
 			<div class="case__sidebar">
 				<div class="case__header">
 					<p class="case__status">
-						Узнать статус заказа
+						Узнать статус <strong>заказа</strong>
 					</p>
 				</div>
 				<form action="" class="case__form status">
