--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -72,7 +72,7 @@
 								Главная
 							</span>
 						</a>
-						<a href="" class="top-nav__link">
+						<a href="#modal-menu" class="top-nav__link" data-fancybox="menu">
 							<svg class="icon-svg">
 								<use xlink:href="img/sprites/sprite.svg#icon-top-menu"></use>
 							</svg>
