--- a/src/blocks/modules/intro/intro.html
+++ b/src/blocks/modules/intro/intro.html
@@ -1,21 +1,54 @@
 <!-- У блока есть несколько цветовых схем, они задаются классом 'intro--type-1'
-Их 13 разных, сделай в админке соответствующий select -->
+	Их 13 разных, сделай в админке соответствующий select -->
 
-<section class="intro intro--type-1">
-	<div class="container">
-		<div class="intro__columns" style="background-image: url('img/intro-img.jpg');">
-			<div class="intro__content">
-				<img class="intro__logo" src="img/intro-img.png" alt="Заглавная картинка">
-				<h2 class="intro__title">
-					Egger decorative collection 2020-22
-				</h2>
-				<a href="" class="btn btn--dark intro__btn">
-					Подробнее
-				</a>
+	<section class="intro intro--type-1">
+		<div class="container">
+			<div class="swiper-container intro__slider">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide intro__slide" style="background-image: url('img/intro-img.jpg');">
+						<div class="intro__content">
+							<img class="intro__logo" src="img/intro-img.png" alt="Заглавная картинка">
+							<h2 class="intro__title">
+								Egger decorative collection 2020-22
+							</h2>
+							<a href="" class="btn btn--dark intro__btn">
+								Подробнее
+							</a>
+						</div>
+						<div class="intro__thumb">
+							<img src="img/intro-img.jpg" alt="Заглавная картинка">
+						</div>
+					</div>
+					<div class="swiper-slide intro__slide" style="background-image: url('img/intro-img.jpg');">
+						<div class="intro__content">
+							<img class="intro__logo" src="img/intro-img.png" alt="Заглавная картинка">
+							<h2 class="intro__title">
+								Egger decorative collection 2020-22
+							</h2>
+							<a href="" class="btn btn--dark intro__btn">
+								Подробнее
+							</a>
+						</div>
+						<div class="intro__thumb">
+							<img src="img/intro-img.jpg" alt="Заглавная картинка">
+						</div>
+					</div>
+					<div class="swiper-slide intro__slide" style="background-image: url('img/intro-img.jpg');">
+						<div class="intro__content">
+							<img class="intro__logo" src="img/intro-img.png" alt="Заглавная картинка">
+							<h2 class="intro__title">
+								Egger decorative collection 2020-22
+							</h2>
+							<a href="" class="btn btn--dark intro__btn">
+								Подробнее
+							</a>
+						</div>
+						<div class="intro__thumb">
+							<img src="img/intro-img.jpg" alt="Заглавная картинка">
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="intro__thumb">
-				<img src="img/intro-img.jpg" alt="Заглавная картинка">
-			</div>
+
 		</div>
-	</div>
-</section>
+	</section>
